# embeddenator-webpuppet-mcp

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  protocol.rs  server.rs  tools.rs
tests/: mcp_validation.rs
