[package]
name = "embeddenator-webpuppet-mcp"
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "MCP (Model Context Protocol) server for webpuppet browser automation"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-webpuppet-mcp"
keywords = ["mcp", "browser-automation", "ai", "copilot", "vscode"]
categories = ["web-programming", "development-tools"]

[features]
default = ["stdio"]
stdio = []
http = ["dep:axum", "dep:tower", "dep:tower-http"]

[dependencies]
# Webpuppet core - enable all providers for full support
embeddenator-webpuppet = { path = "../embeddenator-webpuppet", features = ["all-providers"] }

# Async runtime
tokio = { version = "1.35", features = ["full", "sync"] }
futures = "0.3"
async-trait = "0.1"

# MCP protocol - JSON-RPC 2.0 over stdio
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP server (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "webpuppet-mcp"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
