[package]
name = "embeddenator-webpuppet-mcp"
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "MCP (Model Context Protocol) server for webpuppet browser automation"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-webpuppet-mcp"
keywords = ["mcp", "browser-automation", "ai", "copilot", "vscode"]
categories = ["web-programming", "development-tools"]

[features]
default = ["stdio"]
stdio = []
http = ["dep:axum", "dep:tower", "dep:tower-http"]

[dependencies]
# Webpuppet core - enable all providers for full support
embeddenator-webpuppet = { git = "https://github.com/tzervas/webpuppet-rs", tag = "v0.1.0-alpha.3", features = ["all-providers"] }

# Async runtime
tokio = { version = "=1.49.0", features = ["full", "sync"] }
futures = "=0.3.31"
async-trait = "=0.1.89"

# MCP protocol - JSON-RPC 2.0 over stdio
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.148"

# CLI
clap = { version = "=4.5.26", features = ["derive"] }

# HTTP server (optional)
axum = { version = "=0.7.7", optional = true }
tower = { version = "=0.4.13", optional = true }
tower-http = { version = "=0.5.2", features = ["cors", "trace"], optional = true }

# Error handling
thiserror = "=1.0.69"
anyhow = "=1.0.100"

# Logging
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "=1.19.0", features = ["v4"] }
chrono = { version = "=0.4.42", features = ["serde"] }

[[bin]]
name = "webpuppet-mcp"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "=0.4.4"
